NXT-2120: Enable 'Save as' of shared components
* Update `SaveWorkflow` and `SaveWorkflowCopy`
* Create new utility class `ProjectUtil`
* Some re-factoring to make things easier to work with

NXT-2120 (Fully enable \)